Revert titleless entry change, fix gap between draggable items, fix non draggable cards having drag handle

--- a/war/src/main/less/modules/draggable-card.less
+++ b/war/src/main/less/modules/draggable-card.less
@@ -5,6 +5,7 @@
   border: 2px dashed var(--input-border);
   padding: 1rem;
   border-radius: 10px;
+  margin-bottom: 1rem;
 }
 
 .repeated-chunk .show-if-last { visibility: hidden; }
